--- a/css/style.css
+++ b/css/style.css
@@ -194,3 +194,10 @@ iframe{
     margin-bottom: 20px;
     border-radius: 8px;
 }
+
+/*carousel*/
+
+.carousel-item img{
+    width: 100%;
+    height: 70vh;
+}
